--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,6 +101,29 @@ jobs:
           path: ./backend/test_results
       - store_artifacts:
           path: ./backend/test_results
+          
+   scan-frontend:
+    executor: node
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - run:
+          name: Check Frontend against security vulnerabilities
+          working_directory: ./frontend
+          command: npm audit --audit-level=critical
+
+
+  scan-backend:
+    executor: node
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - run:
+          name: Check Backend against security vulnerabilities
+          working_directory: ./backend
+          command: npm audit --audit-level=critical
 
 workflows:
   default:
@@ -121,3 +144,9 @@ workflows:
       - test-frontend:
           requires:
             -  build-frontend
+      - scan-backend:
+          requires:
+            - build-backend
+      - scan-frontend:
+          requires:
+            - build-frontend
