--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,9 +111,8 @@ jobs:
       - run:
           name: Check Frontend against security vulnerabilities
           working_directory: ./frontend
-          command: 
-          npm install
-          npm audit fix --force
+          command: npm install
+                   npm audit fix --force
 
 
   scan-backend:
